# stdexec

./: .clangd  .gitignore  CMakeLists.txt  receiver_redesign.html  std_execution.html
examples/: coop.cpp  retry.cpp
examples/algorithms/: retry.hpp
examples/cuda/: CMakeLists.txt  README.md
examples/cuda/examples/: bulk.cpp  bulk.cu  maxwell.cpp  reduce.cpp
examples/cuda/examples/maxwell/: common.cuh  cuda.cuh  snr.cuh  std.cuh  stdpar.cuh
examples/cuda/schedulers/: multi_gpu.cuh  stream.cuh  stream.hpp
examples/cuda/schedulers/detail/: _clangd_helper_file.cu  bulk.cuh  bulk.hpp  common.cuh  let_xxx.cuh  reduce.cuh  schedule_from.cuh  split.cuh  sync_wait.cuh  then.cuh  then.hpp  throw_on_cuda_error.cuh  transfer.cuh  upon_error.cuh  upon_stopped.cuh  when_all.cuh  when_all.hpp
examples/cuda/test/: _clangd_helper_file.cu  a_sender.cu  common.cuh  then.cu
examples/maxwell/: common.hpp  omp.cpp  snr.cpp  std.cpp
examples/nvexec/: CMakeLists.txt  bulk.cpp  distributed_maxwell.cpp  maxwell.cpp  maxwell_distributed.cpp  md_base.cpp  md_ov.cpp
examples/nvexec/maxwell/: common.cuh  snr.cuh
include/: execution.hpp
include/exec/__detail/: __bwos_lifo_queue.hpp  __sender_facade.hpp
include/nvexec/: multi_gpu_context.cuh  stream_context.cuh
include/nvexec/detail/: queue.cuh
include/nvexec/stream/: bulk.cuh  common.cuh  ensure_started.cuh  let_xxx.cuh  reduce.cuh  schedule_from.cuh  split.cuh  sync_wait.cuh  then.cuh  transfer.cuh  upon_error.cuh  upon_stopped.cuh  when_all.cuh
include/stdexec/: execution.hpp
test/algos/adaptors/: test_bulk.cpp
test/exec/: test_custom_channel.cpp
test/nvexec/: bulk.cpp  let_error.cpp  let_stopped.cpp  let_value.cpp  start_detached.cpp  when_all.cpp
